--- a/v2.0/src/components/Histogram/Histogram.module.css
+++ b/v2.0/src/components/Histogram/Histogram.module.css
@@ -15,9 +15,14 @@
 @media only screen and (max-width: 1024px) {
     .Wrapper{
         display: inline;
-        margin: auto;
+        margin: 0 auto;
     }
     .PieChart{
-        margin: 1rem 0 0 20rem;
+        margin: 1rem 0 0 20%;
+        width: 70%;
+    }
+    .Histogram{
+        width: 90%;
+        margin: 11rem 0 0 3rem;
     }
 }
