--- a/v2.0/src/components/Layout/Layout.module.css
+++ b/v2.0/src/components/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   height: 100%;
   width: 100px;
   position: fixed;
-  z-index: 3 !important;;
+  z-index: 99 !important;;
   left: 0;
   background-color: #383838;
   border-right: solid #808080 1.5px;
@@ -17,7 +17,7 @@
         height: 100px;
         width: 100%;
         position: fixed;
-        z-index: 3 !important;;
+        z-index: 99 !important;;
         top: 0;
         overflow-x: hidden;
         text-align: center;
